v2/test-data/elab/fun-lit/ambiguous-param.snapshot
exit status: 0

stdout = """
(fun (x : ?0) => x) : ?0 -> ?0
"""

stderr = """
error: Unsolved metavariable: ?0
  ┌─ test-data/elab/fun-lit/ambiguous-param.pion:1:12
  │
1 │ #check fun x => x;
  │            ^ could not infer type of variable `x`
"""
